--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "name": "AmiGO OpenSearch Service",
+  "version": "0.0.9",
+  "description": "OpenSearch server for AmiGO (etc.) using the GOlr backend.",
   "keywords": [
     "OpenShift",
     "Node.js",
     "application",
-    "openshift"
+    "gene ontology",
+    "GO",
+    "amigo",
+    "bbop"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url":  "http://www.openshift.com/"
+    "name": "SJC",
+    "email": "sjcarbon@lbl.gov",
+    "url":  "http://berkeleybop.org/"
   },
-  "homepage": "http://www.openshift.com/",
+  "homepage": "http://berkeleybop.org/",
   "repository": {
     "type": "git",
     "url": "https://gitub.com/openshift/origin-server"
   },
-
   "engines": {
-    "node": ">= 0.6.0",
+    "node": ">= 0.10.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "main": "server.js"
 }
