package deps explicit

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+      "bbop": "2.0.0-rc1",
+      "amigo2": "2.0.0-rc1",
+      "mustache": "0.8.0",
+      "express" : "3.4.6
   },
   "devDependencies": {},
   "bundleDependencies": [],
